// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handler should not overwrite config file when \`overwrite\` option set to false 1`] = `
Array [
  Array [
    "[31mNot overwriting existing file 'some/path/.lagoon.yml'.[39m",
  ],
]
`;

exports[`handler should overwrite existing config file if overwrite option passed as true 1`] = `
Array [
  Array [
    "[34m![39m Set \\"overwrite\\" option to \\"true\\" from arguments or config",
  ],
  Array [
    "[34m![39m Set \\"project\\" option to \\"test_project\\" from arguments or config",
  ],
  Array [
    "[34m![39m Set \\"api\\" option to \\"\\" from arguments or config",
  ],
  Array [
    "[34m![39m Set \\"ssh\\" option to \\"\\" from arguments or config",
  ],
  Array [
    "[34m![39m Set \\"token\\" option to \\"\\" from arguments or config",
  ],
  Array [
    "Creating file 'some/path/.lagoon.yml'...",
  ],
  Array [
    "[32mConfiguration file created![39m",
  ],
]
`;

exports[`handler should write default yaml to given cwd + .lagoon.yml 1`] = `
Array [
  Array [
    "[34m![39m Set \\"project\\" option to \\"test_project\\" from arguments or config",
  ],
  Array [
    "[34m![39m Set \\"api\\" option to \\"\\" from arguments or config",
  ],
  Array [
    "[34m![39m Set \\"ssh\\" option to \\"\\" from arguments or config",
  ],
  Array [
    "[34m![39m Set \\"token\\" option to \\"\\" from arguments or config",
  ],
  Array [
    "Creating file 'some/path/.lagoon.yml'...",
  ],
  Array [
    "[32mConfiguration file created![39m",
  ],
]
`;
